--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 .idea/
 run/
 build/
+!gradle/wrapper/gradle-wrapper.jar
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
